--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,4 +6,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div id="map_canvas">
+    <button ion-button (click)="onButtonClick($event)">Start demo</button>
+  </div>        
+</ion-content>
