--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,5 +7,7 @@
 </ion-header>
 
 <ion-content>
-    <div><p>Coming soon<p></div>
+    <ion-list>
+        <ion-item *ngFor="let vehicle of vehicles">{{vehicle}}</ion-item>
+    </ion-list>
 </ion-content>
