--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -7,5 +7,13 @@
 </ion-header>
 
 <ion-content>
-    <div><p>Comming soon</p></div>
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>App Properties</ion-card-title>
+            <ion-card-content>
+                <ion-text><p>App name: {{appName}}</p></ion-text>
+                <ion-text><p>App version: {{versionNumber}}</p></ion-text>
+            </ion-card-content>
+        </ion-card-header>
+    </ion-card>
 </ion-content>
