--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,8 +20,9 @@
               <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
             </ion-item>
           </div>
+          <ion-text color="danger">{{errorMessage}}</ion-text>
           <div class="ion-padding">
-            <ion-button size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+            <ion-button size="large" type="submit" [disabled]="disabled" expand="block">Login</ion-button>
           </div>
         </ion-col>
       </ion-row>
