--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,7 +9,16 @@
 <ion-content>
     <ion-card>
         <ion-card-header>
-            <ion-card-title>App Properties</ion-card-title>
+            <ion-card-title>User</ion-card-title>
+            <ion-card-content>
+                <ion-text><p>email: {{email}}</p></ion-text>
+                <ion-button id="logoutButton" color="primary" [disabled]="disabled" (click)="logout()">Logout</ion-button>
+            </ion-card-content>
+        </ion-card-header>
+    </ion-card>
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>App</ion-card-title>
             <ion-card-content>
                 <ion-text><p>App name: {{appName}}</p></ion-text>
                 <ion-text><p>App version: {{versionNumber}}</p></ion-text>
